syntax = "proto3";

package Proto.Todo;

service TodoService {
    rpc GetTodoItems (Empty) returns (GetTodoItemsResponse) {}
    rpc GetTodoItem (GetTodoItemRequest) returns (GetTodoItemResponse) {}
}

message Empty {}

message Todo {
    string Id = 1;
    string Name = 2;
    bool IsComplete = 3;
}

message GetTodoItemsResponse {
   repeated Todo todos = 1;
}

message GetTodoItemRequest {
    string Id = 1;
}

message GetTodoItemResponse {
    Todo todo = 1;
}